﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

PLUGINS
	Updated: API version to 1.0.4

YOUTRACK
	IP-1509 Could not generate SSL certificate through the frontEnd - Invalide SSL certificate (regression fix)
	IP-1511 Use of uninitialized value $imscpOldConfig{"BASE_SERVER_VHOST"} on fresh install

------------------------------------------------------------------------------------------------------------------------
1.2.17
------------------------------------------------------------------------------------------------------------------------

2016-03-12: Laurent Declercq
	RELEASE i-MSCP 1.2.17

BACKEND
	Fixed: Can't locate Data/Validate/IP.pm (now lazy-loaded to prevent failure on update) (iMSCP::Net)
	Fixed: peer address not recognized in the case of a pointopoint interface (regression fix)

CONTRIB
	Fixed: Create the provisioning script even with the imscp-setup script (10_named_slave_provisioning.pl)

INSTALLER
	Fixed: Argument "" isn't numeric in numeric eq (==) at engine/PerlLib/Package/FrontEnd/Installer.pm line 270
	Fixed: Could not add intermediate SSL certificates; dialog is always skipped (regression fix)
	Fixed: Could not enable service when unit file is a symlink due to 'No such file or directory' error (systemd)
	Fixed: MariaDB SQL server not selectable on fresh install (regression fix)
	Fixed: Missing mysql-common package in MariaDB package sections (Debian Jessie)
	Fixed: Panel SSL certificate chain not removed when disabling SSL or changing hostname
	Fixed: When changing panel hostname, DNS zone file is not removed

SERVERS
	Fixed: Cannot connect to VsFTPD when behind NAT (WAN <-> LAN)

TOOLS
	Fixed: imscp-net-traffic-logger must not fail if part of rules were already removed

VENDOR